--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "grunt-estrn-sass",
-  "description": "Use estrn-sass with grunt.",
+  "name": "grunt-mundler",
+  "description": "Use Mundler with grunt.",
   "version": "1.0.0",
   "homepage": "",
   "author": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://bitbucket.com/contextllc/grunt-estrn-sass.git"
+    "url": "git://github.com/spencer-leopold/grunt-mundler.git"
   },
   "licenses": [
     {
@@ -24,7 +24,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "estrn-sass": "git+ssh://git@bitbucket.com:contextllc/estrn-sass.git"
+    "mundler": "^1.2.0"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
@@ -38,10 +38,8 @@
   "keywords": [
     "gruntplugin"
   ],
-  "readme": "# grunt-estrn-sass\n\n> Use estrn-sass with grunt.\n\n## Getting Started\nThis plugin requires Grunt `~0.4.5`\n\nIf you haven't used [Grunt](http://gruntjs.com/) before, be sure to check out the [Getting Started](http://gruntjs.com/getting-started) guide, as it explains how to create a [Gruntfile](http://gruntjs.com/sample-gruntfile) as well as install and use Grunt plugins. Once you're familiar with that process, you may install this plugin with this command:\n\n```shell\nnpm install grunt-estrn-sass --save-dev\n```\n\nOnce the plugin has been installed, it may be enabled inside your Gruntfile with this line of JavaScript:\n\n```js\ngrunt.loadNpmTasks('grunt-estrn-sass');\n```\n\n## The \"estrn_sass\" task\n\n### Overview\nIn your project's Gruntfile, add a section named `estrn_sass` to the data object passed into `grunt.initConfig()`.\n\n```js\ngrunt.initConfig({\n  estrn_sass: {\n    options: {\n      // Task-specific options go here.\n    },\n    your_target: {\n      // Target-specific file lists and/or options go here.\n    },\n  },\n});\n```\n\n### Options\n\n#### options.separator\nType: `String`\nDefault value: `',  '`\n\nA string value that is used to do something with whatever.\n\n#### options.punctuation\nType: `String`\nDefault value: `'.'`\n\nA string value that is used to do something else with whatever else.\n\n### Usage Examples\n\n#### Default Options\nIn this example, the default options are used to do something with whatever. So if the `testing` file has the content `Testing` and the `123` file had the content `1 2 3`, the generated result would be `Testing, 1 2 3.`\n\n```js\ngrunt.initConfig({\n  estrn_sass: {\n    options: {},\n    files: {\n      'dest/default_options': ['src/testing', 'src/123'],\n    },\n  },\n});\n```\n\n#### Custom Options\nIn this example, custom options are used to do something else with whatever else. So if the `testing` file has the content `Testing` and the `123` file had the content `1 2 3`, the generated result in this case would be `Testing: 1 2 3 !!!`\n\n```js\ngrunt.initConfig({\n  estrn_sass: {\n    options: {\n      separator: ': ',\n      punctuation: ' !!!',\n    },\n    files: {\n      'dest/default_options': ['src/testing', 'src/123'],\n    },\n  },\n});\n```\n\n## Contributing\nIn lieu of a formal styleguide, take care to maintain the existing coding style. Add unit tests for any new or changed functionality. Lint and test your code using [Grunt](http://gruntjs.com/).\n\n## Release History\n_(Nothing yet)_\n",
-  "readmeFilename": "README.md",
-  "_id": "grunt-estrn-sass@1.0.0",
+  "_id": "grunt-mundler@1.0.0",
   "_shasum": "dffc9d4dfc578853ed0484b97695a9252e928123",
-  "_resolved": "git+ssh://git@bitbucket.com:spencer_leopold/grunt-estrn-sass.git#eb8fea1d262e18fea3c9858af6b79fd962a04e04",
-  "_from": "grunt-estrn-sass@git+ssh://git@bitbucket.com:spencer_leopold/grunt-estrn-sass.git"
+  "_resolved": "git+ssh://git@mundler.com:spencer-leopold/grunt-mundler.git#eb8fea1d262e18fea3c9858af6b79fd962a04e04",
+  "_from": "grunt-mundler@git+ssh://git@github.com:spencer-leopold/grunt-mundler.git"
 }
