--- a/.jshintrc
+++ b/.jshintrc
@@ -1,13 +1,36 @@
 {
+  "node": true,
+  "esnext": false,
+  "bitwise": false,
+  "camelcase": false,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
+  "indent": 2,
   "latedef": true,
+  "loopfunc": true,
   "newcap": true,
   "noarg": true,
-  "sub": true,
+  "quotmark": false,
+  "regexp": true,
   "undef": true,
-  "boss": true,
-  "eqnull": true,
-  "node": true
+  "unused": "vars",
+  "strict": true,
+  "trailing": true,
+  "smarttabs": true,
+  "white": true,
+  "globals": {
+    "window": false,
+    "jQuery": false
+  },
+  "predef": [
+    "Drupal",
+    "drupalSettings",
+    "jQuery",
+    "DEBUG",
+    "matchMedia",
+    "Backbone",
+    "VIE",
+    "CKEDITOR"
+  ]
 }
